--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=66603a074a74e5a23ae2",
+    "/css/app.css": "/css/app.css?id=ffdc343be2151d9f59e1"
 }
